<resources>
    <string name="app_name">Runtastic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="overview">OVERVIEW</string>
    <string name="session">SESSION</string>
    <string name="goals">GOALS</string>
    <string name="totaldistance">Total Distance</string>
    <string name="since">Since 1 June 2018</string>
    <string name="kilometer">194.93 km</string>
    <string name="totalruns">Total Runs</string>
    <string name="avgtime">Avg Time</string>
    <string name="run">34</string>
    <string name="time">27 min</string>
    <string name="history">19 June - 24 June 2018</string>
    <string name="activetime">Active Time</string>
    <string name="distance">Distance</string>
    <string name="calories">Calories</string>
    <string name="active">47.51</string>
    <string name="kilometers">12.47 km</string>
    <string name="cal">1.842</string>
</resources>
