<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textColor="@color/White"
                android:background="@color/colorPrimary"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/yellow"/>

        </LinearLayout>

        <Button
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:text="@string/session"
            android:textColor="@color/White"
            android:background="@color/colorPrimary"/>

        <Button
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:text="@string/goals"
            android:textColor="@color/White"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:paddingBottom="30dp"
                android:background="@color/Black">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="20dp">

                    <TextView
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:paddingStart="30dp"
                        android:text="@string/totaldistance"
                        android:textColor="@color/White"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="15dp"
                        android:text="@string/since"
                        android:textColor="@color/White"
                        tools:ignore="RtlSymmetry"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/White"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:paddingStart="30dp"
                    android:text="@string/kilometer"
                    tools:ignore="RtlSymmetry" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:paddingStart="30dp"
                        android:text="@string/totalruns"
                        android:textColor="@color/White"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:text="@string/avgtime"
                        android:textColor="@color/White"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:paddingStart="30dp"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:text="@string/run"
                        android:textColor="@color/White"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:text="@string/time"
                        android:textColor="@color/White"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="77dp"
                android:paddingTop="25dp"
                tools:ignore="RtlSymmetry">

                <ImageButton
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/rightarrow"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history"
                    android:textColor="@color/gray"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textStyle="bold" />

                <ImageButton
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/leftarrow"
                    tools:ignore="ContentDescription" />

            </LinearLayout>


            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="311dp"
                android:layout_height="182dp"
                android:paddingTop="20dp"
                app:srcCompat="@drawable/statistic"
                tools:ignore="ContentDescription" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="127dp"
                    android:layout_height="wrap_content"
                    android:text="@string/activetime"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/gray"/>

                <TextView
                    android:layout_width="127dp"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/gray"/>

                <TextView
                    android:layout_width="127dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/calories"
                    android:textStyle="bold"
                    android:textColor="@color/gray"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="127dp"
                    android:layout_height="wrap_content"
                    android:text="@string/active"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/gray"/>

                <TextView
                    android:layout_width="127dp"
                    android:layout_height="wrap_content"
                    android:text="@string/kilometers"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/gray"/>

                <TextView
                    android:layout_width="127dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/cal"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/gray"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>